[package]
name = "stun"
version = "0.1.0"
edition = "2024"
authors = ["akagi201"]
description = "SSH port forwarding and tunneling tool"
license = "Apache-2.0"

[[bin]]
name = "stun"
path = "src/main.rs"

[lib]
name = "stun"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "chrono",
] }
